; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/exynos/extr_exynos_drm_g2d.c_g2d_open.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/exynos/extr_exynos_drm_g2d.c_g2d_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_device = type { i32 }
%struct.drm_file = type { %struct.drm_exynos_file_private* }
%struct.drm_exynos_file_private = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @g2d_open(%struct.drm_device* %0, %struct.drm_file* %1) #0 {
  %3 = alloca %struct.drm_device*, align 8
  %4 = alloca %struct.drm_file*, align 8
  %5 = alloca %struct.drm_exynos_file_private*, align 8
  store %struct.drm_device* %0, %struct.drm_device** %3, align 8
  store %struct.drm_file* %1, %struct.drm_file** %4, align 8
  %6 = load %struct.drm_file*, %struct.drm_file** %4, align 8
  %7 = getelementptr inbounds %struct.drm_file, %struct.drm_file* %6, i32 0, i32 0
  %8 = load %struct.drm_exynos_file_private*, %struct.drm_exynos_file_private** %7, align 8
  store %struct.drm_exynos_file_private* %8, %struct.drm_exynos_file_private** %5, align 8
  %9 = load %struct.drm_exynos_file_private*, %struct.drm_exynos_file_private** %5, align 8
  %10 = getelementptr inbounds %struct.drm_exynos_file_private, %struct.drm_exynos_file_private* %9, i32 0, i32 2
  %11 = call i32 @INIT_LIST_HEAD(i32* %10)
  %12 = load %struct.drm_exynos_file_private*, %struct.drm_exynos_file_private** %5, align 8
  %13 = getelementptr inbounds %struct.drm_exynos_file_private, %struct.drm_exynos_file_private* %12, i32 0, i32 1
  %14 = call i32 @INIT_LIST_HEAD(i32* %13)
  %15 = load %struct.drm_exynos_file_private*, %struct.drm_exynos_file_private** %5, align 8
  %16 = getelementptr inbounds %struct.drm_exynos_file_private, %struct.drm_exynos_file_private* %15, i32 0, i32 0
  %17 = call i32 @INIT_LIST_HEAD(i32* %16)
  ret i32 0
}

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
